--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
- <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700;800;900&family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>نقطة الانطلاق</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 </head>
 <body>
 
-<div class="app">
-  <h1 class="title">نقطة الانطلاق</h1>
+  <div class="container">
 
-  <div class="logo">
-    <img src="logo.png" alt="logo">
-    <h2> </h2>
+    <h1 class="title">نقطة الانطلاق</h1>
+
+    <img src="logo.png" class="logo" alt="logo">
+
+    <div class="login-box">
+
+      <button class="btn google" onclick="loginWithGoogle()">
+        <img src="https://img.icons8.com/color/48/google-logo.png"/>
+        تسجيل الدخول بحساب Google
+      </button>
+
+      <button class="btn facebook" onclick="loginWithFacebook()">
+        <img src="https://img.icons8.com/color/48/facebook.png"/>
+        تسجيل الدخول بحساب فيسبوك
+      </button>
+
+    </div>
+
   </div>
 
- <div class="buttons">
-  <button class="btn google" onclick="loginGoogle()">
-    تسجيل الدخول - حسابات Google
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Logo_2013_Google.png">
-  </button>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
-  <button class="btn facebook" onclick="loginFacebook()">
-    تسجيل الدخول بحساب فيسبوك
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg">
-  </button>
-</div>
-
-<script src="app.js"></script>
+  <script src="auth.js"></script>
 </body>
 </html>
+
+
